--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Frontend Starter React</title>
+    <title>StreetCred</title>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Social credit proof"
     />
   </head>
   <body class="bg-black-background">
