reduced as much as I can

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <body>
     <noscript>Please, turn on JavaScript to see this page.</noscript>
     <div id="root"></div>
-    <!-- Define to use some web3 libs -->
+    <!-- Define to use the web3 libs -->
     <script type="module">
       import process from 'process'
       import { Buffer } from 'buffer'
