add window.process = {};

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
+    <script>
+      window.process = {}
+    </script>
   </head>
   <body>
     <noscript>Please, turn on JavaScript to see this page.</noscript>
