add libs definition

--- a/index.html
+++ b/index.html
@@ -42,13 +42,21 @@
     />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
-    <script>
-      window.process = {}
-    </script>
   </head>
   <body>
     <noscript>Please, turn on JavaScript to see this page.</noscript>
     <div id="root"></div>
+    <!-- Define to use the web3 libs -->
+    <script type="module">
+      import process from 'process'
+      import { Buffer } from 'buffer'
+      import EventEmitter from 'events'
+
+      window.global = window
+      window.Buffer = Buffer
+      window.process = process
+      window.EventEmitter = EventEmitter
+    </script>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
