Created style base with fonts, colors, shadows, sizes

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>StreetCred</title>
+    <title>SealCred</title>
     <meta name="description" content="Prove without doxing" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <!-- Favicons -->
@@ -38,10 +38,10 @@
     <link
       rel="mask-icon"
       href="/favicons/safari-pinned-tab.svg"
-      color="#5bbad5"
+      color="#0d0030"
     />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="msapplication-TileColor" content="#0d0030" />
+    <meta name="theme-color" content="#0d0030" />
   </head>
   <body>
     <noscript>Please, turn on JavaScript to see this page.</noscript>
