--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <meta name="msapplication-TileColor" content="#0d0030" />
     <meta name="theme-color" content="#0d0030" />
   </head>
+  <!-- SnarkJS -->
+  <script src="scripts/snarkjs.min.js"></script>
   <body>
     <noscript>Please, turn on JavaScript to see this page.</noscript>
     <div id="root"></div>
