--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>SealCred</title>
     <meta name="description" content="Prove without doxing" />
+    <!-- Open Graph -->
+    <meta property="og:image" content="/img/SealCred_cover.png" />
+    <meta property="og:title" content="SealCred" />
+    <meta
+      property="og:description"
+      content="Privacy-preserving social protocol built with ZK soul-bound NFTs"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
