--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>SealCred</title>
     <meta name="description" content="Prove without doxing" />
+    <!-- Open Graph -->
+    <meta property="og:image" content="/img/sealcredCover.webp" />
+    <meta property="og:title" content="SealCred" />
+    <meta
+      property="og:description"
+      content="Privacy-preserving social protocol built with ZK soul-bound NFTs"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="SealCred" />
+    <meta
+      name="twitter:description"
+      content="Privacy-preserving social protocol built with ZK soul-bound NFTse"
+    />
+    <meta name="twitter:site" content="@sealcred" />
+    <meta name="twitter:image" content="/img/sealcredCover.webp" />
+    <meta name="twitter:creator" content="@sealcred" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
