--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <meta name="theme-color" content="#0d0030" />
   </head>
   <!-- SnarkJS -->
-  <script src="scripts/snarkjs.min.js"></script>
+  <script src="/scripts/snarkjs.min.js"></script>
   <body>
     <noscript>Please, turn on JavaScript to see this page.</noscript>
     <div id="root"></div>
