--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>SealCred</title>
     <meta name="description" content="Prove without doxing" />
     <!-- Open Graph -->
+    <meta property="og:url" content="https://sealcred.xyz" />
     <meta property="og:image" content="/img/sealcredCover.webp" />
     <meta property="og:title" content="SealCred" />
     <meta
