--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Prove without doxing" />
     <!-- Open Graph -->
     <meta property="og:url" content="https://sealcred.xyz" />
+    <meta property="og:type" content="website" />
     <meta property="og:image" content="/img/sealcredCover.webp" />
     <meta property="og:title" content="SealCred" />
     <meta
