Add final extra tags

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: https://ogp.me/ns/website#">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -8,6 +8,7 @@
     <!-- Open Graph -->
     <meta property="og:url" content="https://sealcred.xyz" />
     <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="SealCred" />
     <meta property="og:image" content="/img/sealcredCover.webp" />
     <meta property="og:title" content="SealCred" />
     <meta
