Changed cover to jpg

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:url" content="https://sealcred.xyz" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="SealCred" />
-    <meta property="og:image" content="/img/sealcredCover.webp" />
+    <meta property="og:image" content="/img/sealcredCover.jpg" />
     <meta property="og:title" content="SealCred" />
     <meta
       property="og:description"
@@ -25,7 +25,7 @@
       content="Privacy-preserving social protocol built with ZK soul-bound NFTse"
     />
     <meta name="twitter:site" content="@sealcred" />
-    <meta name="twitter:image" content="/img/sealcredCover.webp" />
+    <meta name="twitter:image" content="/img/sealcredCover.jpg" />
     <meta name="twitter:creator" content="@sealcred" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
