--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <title>SealCred</title>
     <meta name="description" content="Prove without doxing" />
     <!-- Open Graph -->
-    <meta property="og:url" content="https://sealcred.xyz" />
+    <meta property="og:url" content="https://sealcred.xyz." />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="SealCred" />
-    <meta property="og:image" content="/img/sealcredCover.jpg" />
+    <meta
+      property="og:image"
+      content="https://sealcred.xyz/img/sealcredCover.jpg"
+    />
     <meta property="og:title" content="SealCred" />
     <meta
       property="og:description"
@@ -25,7 +28,10 @@
       content="Privacy-preserving social protocol built with ZK soul-bound NFTse"
     />
     <meta name="twitter:site" content="@sealcred" />
-    <meta name="twitter:image" content="/img/sealcredCover.jpg" />
+    <meta
+      name="twitter:image"
+      content="https://sealcred.xyz/img/sealcredCover.jpg"
+    />
     <meta name="twitter:creator" content="@sealcred" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
