--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta name="twitter:title" content="SealCred" />
     <meta
       name="twitter:description"
-      content="Privacy-preserving social protocol built with ZK soul-bound NFTse"
+      content="Privacy-preserving social protocol built with ZK soul-bound NFTs"
     />
     <meta name="twitter:site" content="@sealcred" />
     <meta
